src/test/deca/avecObjet/valid/field_shadow_param_ok.deca
// Description :
//    Paramètre masquant un champ (shadowing autorisé).
//
// Resultats :
//    OK

class A {
    int x;

    void set(int x) {
        println(x);
    }
}

{
}

