src/test/deca/avecObjet/invalid/double_method_asm.deca
class A {
    void f() asm("RTS");
    int f() asm("RTS");
}